oracle (#17)
* allow for multiple services on api endpoint server

* add service endpoint for Oracle. remove SkyTest. Its purpose served 🫡

* launch service endpoint. nut.Launcher port correction

* Oracle -> Delphi proto adaptor

* E2E testing using Sky Oracle Service

F:)ck yea

* interim work on running smoke test of demo usingTestContains

* disable for now

* update mvnw

* improved local demo SmokeTest using containers rather than compose.

use "e2e" profile for (currently failing) E2E test using docker.

* Oracle smoke test with minimal kernel using Docker

* enable e2e docker testing in CI. Will it blend?